<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:clickable="false"
    android:background="@color/light_orange">
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_TitleDirectory"
        android:textStyle="bold"
        android:textSize="30sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20sp"
        android:id="@+id/text"/>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="25dp"
        android:columnCount="2"
        android:rowCount="4"
        android:layout_below="@id/text">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            app:cardElevation="8dp"
            app:cardCornerRadius="10dp"
            android:layout_margin="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="174dp"
                android:layout_gravity="center_vertical|center_horizontal"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    android:src="@drawable/police_12308506" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_policia"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:textSize="18sp"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            app:cardElevation="8dp"
            app:cardCornerRadius="10dp"
            android:layout_margin="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="174dp"
                android:layout_gravity="center_vertical|center_horizontal"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    android:src="@drawable/firefighter_12307886" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_bomberos"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:textSize="18sp"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            app:cardElevation="8dp"
            app:cardCornerRadius="10dp"
            android:layout_margin="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="174dp"
                android:layout_gravity="center_vertical|center_horizontal"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="136dp"
                    android:layout_height="121dp"
                    android:src="@drawable/medical_7771027" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_cruzroja"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:textSize="18sp"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </GridLayout>


</RelativeLayout>